# account-analytic

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  oca_dependencies.txt  test-requirements.txt
account_analytic_account_tag/: README.rst  __manifest__.py
account_analytic_ap_ar/: README.rst  __manifest__.py
account_analytic_asset/: README.rst  __init__.py  __manifest__.py
account_analytic_category/: README.rst  __manifest__.py
account_analytic_default_account/: README.rst  __manifest__.py
account_analytic_default_purchase/: README.rst  __manifest__.py
account_analytic_default_tag/: README.rst  __manifest__.py
account_analytic_default_tag_purchase/: README.rst  __manifest__.py
account_analytic_default_tag_sale/: README.rst  __manifest__.py
account_analytic_distribution/: README.rst  __init__.py  __manifest__.py  __openerp__.py
account_analytic_distribution_import/: README.rst  __manifest__.py
account_analytic_distribution_manual/: README.rst  __init__.py  __manifest__.py  hooks.py
account_analytic_distribution_manual_date/: README.rst  __init__.py  __manifest__.py
account_analytic_distribution_required/: README.rst  __manifest__.py
account_analytic_document_date/: README.rst  __manifest__.py  hooks.py
account_analytic_group_reorder/: README.rst  __manifest__.py
account_analytic_line_invoice/: README.rst  __manifest__.py
account_analytic_line_list/: __init__.py  __openerp__.py
account_analytic_line_name_text/: README.rst  __manifest__.py
account_analytic_line_split/: README.rst  __manifest__.py
account_analytic_no_lines/: README.rst  __manifest__.py  __openerp__.py
account_analytic_organization/: README.rst  __init__.py  (+1 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+2515 files in other folders)
